<resources>
    <string name="app_name">Image Processor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_image">Add image</string>
    <string name="cancel">Cancel</string>
    <string name="failed">Operation Failed</string>
    <string name="please_enter">Please Enter URL</string>
    <string name="no_internet">No internet</string>
    <string name="download">Download</string>
    <string name="no_image">No image</string>
    <string name="no_data">No Data</string>

    <string name="rotate">Rotate</string>
    <string name="invert">Invert colors</string>
    <string name="mirror">Mirror image</string>

    <string name="make_photo">Photo</string>
    <string name="take_from_storage">Storage</string>
    <string name="get_from_url">URL</string>
    <string name="input_url">Enter URL</string>

    <string name="delete">Delete</string>
    <string name="source">Source</string>
    <string name="select_next_step">Select an action</string>
    <string name="item_dialog_message">What do you want to do with this image?</string>

</resources>
