<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/make_photo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/make_photo"/>

    <Button
        android:id="@+id/take_from_storage_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/make_photo_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/take_from_storage"/>

    <Button
        android:id="@+id/load_from_internet_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/take_from_storage_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/get_from_url"/>

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/load_from_internet_btn"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:hint="@string/input_url"/>

        <Button
            android:id="@+id/download_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/download"/>

    </LinearLayout>

</RelativeLayout>