<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_image_processor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/content_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/add_image_btn"
                android:layout_width="wrap_content"
                android:text="@string/add_image"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/rotate_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rotate"/>

            <Button
                android:id="@+id/invert_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/invert"/>

            <Button
                android:id="@+id/mirror_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mirror"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
